--- a/02-android/app/src/main/res/layout/activity_main.xml
+++ b/02-android/app/src/main/res/layout/activity_main.xml
@@ -87,4 +87,18 @@
         app:layout_constraintStart_toStartOf="@+id/btn_intent_respuesta"
         app:layout_constraintTop_toBottomOf="@+id/btn_intent_respuesta" />
 
+    <Button
+        android:id="@+id/btn_resp_propia"
+        android:layout_width="166dp"
+        android:layout_height="36dp"
+        android:layout_marginStart="136dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="109dp"
+        android:layout_marginBottom="101dp"
+        android:text="Respuesta propia"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_intent_implicito" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
